# chatApp

./: .gitignore  .sample_.env  DockerDeploy.md  README.md  db.sqlite3  docker-compose.yml  eshop-package.postman_collection.json  gunicorn.service  manage.py  readme.md  requirements.txt  sample.env
ChatApp/: consumers.py  models.py  urls.py  views.py
ChatProject/: settings.py
amadersheba/: settings.py  urls.py  wsgi.py
blog/: admin.py  models.py  serializers.py  urls.py  views.py
blogPackage/: asgi.py  settings.py  urls.py  wsgi.py
commerce/: admin.py  models.py  urls.py
commerce/models/: __init__.py  category.py  order.py  product.py
commerce/serializers/: category_serializer.py  order_serializer.py  product_serializer.py
commerce/utils/: enum.py
commerce/views/: category_view.py  order_view.py  product_view.py
dj_commerce/: README.rst  setup.cfg
dj_commerce/dj_rest_commerce.egg-info/: PKG-INFO  SOURCES.txt
eshop/: settings.py  urls.py
services/: admin.py  forms.py  models.py  urls.py  views.py
services/migrations/: 0001_initial.py  0002_auto_20180428_1743.py  0003_study.py  0004_auto_20180430_0651.py  0005_auto_20180502_2144.py  0006_auto_20180502_2216.py  0007_auto_20180502_2248.py  0008_auto_20180502_2307.py  0009_auto_20180503_0149.py  0010_auto_20180503_0210.py  0011_auto_20180503_0214.py  0012_auto_20180506_1203.py  0013_auto_20180506_1240.py
static/css/: main.css
templates/: _message.html  message.html  test.html
templates/app/: base.html  base_template.html  (+2 more)
userinfo/: admin.py  forms.py  models.py  urls.py  views.py
(+30 files in other folders)
