[metadata]
name = dj-commerce
version = 1.0
description = Django rest framework E-commerce package.
long_description = Django rest framework E-commerce package which has simple beautiful eCommerce features.
author = Bozlur Rosid Sagor
author_email = brshagor.cse@gmail.com
license = MIT
maintainer_email = mbrsagor@gmail.com
url = https://mbrsagorbd.wordpress.com/djcommercedocs/
keywords = E-commerce, Django e-commerce
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
packages = find:
